gcc/testsuite/rust/rustc/ui/pub/pub-ident-with-lifetime-incomplete.rs
fn main() {
}

pub   foo<'a>
// { dg-error "" "" { target *-*-* } .-1 }

